# drop-box

./: .gitignore  CMakeLists.txt  README.md  SecureDropBox.pro
include/: CompressionManager.h  EncryptionManager.h  ExclusionManager.h  FileMonitor.h  FileProcessor.h  FileSystemManager.h  LoadingScreen.h  Logger.h  MetadataManager.h  SettingsDialog.h
src/: CompressionManager.cpp  EncryptionManager.cpp  ExclusionManager.cpp  FileMonitor.cpp  FileProcessor.cpp  FileSystemManager.cpp  LoadingScreen.cpp  Logger.cpp  MetadataManager.cpp  SettingsDialog.cpp  Utils.cpp  Utils.h  main.cpp
tests/: CMakeLists.txt  EncryptionManagerTest.cpp  test_main.cpp
